--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.1.2",
+    "@types/classnames": "^2.3.1",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
