--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "classnames": "^2.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
